--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
 
         <section class="messages">
             <div class="msg received">
-                UI romba clean ah iruku 👌
+                Idea presentation completed
                 <span class="meta">10:38</span>
             </div>
 
             <div class="msg sent">
-                Thanks machi 🔥
+                Great
                 <span class="meta">10:39 ✓✓</span>
             </div>
 
@@ -128,4 +128,5 @@
 </body>
 
 </html>
+
 
